fix overflow error

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,5 @@
 body{
     background: #141414;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
